# rtc-framework

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  ISOLATION_PLAN.md  LICENSE  README.md  build.sh  codecov.yml  deps.repos  install.sh  merge_compile_commands.py  organize_files.sh  package.xml  plan-msg-unification.md  plan.md  plan_hand_inprocess.md  planning_sim.md  pyproject.toml  requirements.in  setup.py
repo_scripts/: CMakeLists.txt  README.md  package.xml
repo_scripts/scripts/: build_deps.sh  build_rt_kernel.sh  check_rt_setup.sh  cpu_shield.sh  flame.sh  install_dev_tools.sh  perf_record.sh  setup_env.sh  setup_irq_affinity.sh  setup_nvidia_rt.sh  setup_udp_optimization.sh  timeline.sh  uninstall_system_deps.sh  verify_isolation.sh  verify_rt_runtime.sh
repo_scripts/test/: test_rt_common.sh
robot_descriptions/: CMakeLists.txt  README.md  package.xml
rtc_base/: CMakeLists.txt  README.md  package.xml
rtc_base/test/: test_cpu_topology.cpp  test_filters.cpp  test_mpc_thread_config.cpp  test_periodic_rt_thread.cpp  test_seqlock.cpp  test_session_dir.cpp  test_spsc_buffer.cpp  test_thread_csv.cpp  test_thread_timing.cpp
rtc_communication/: CMakeLists.txt  README.md  package.xml
rtc_communication/test/: fake_codec.hpp  test_transceiver.cpp  test_udp_loopback.cpp
rtc_controller_interface/: CMakeLists.txt  README.md  package.xml
rtc_controller_interface/src/: controller_registry.cpp  rt_controller_interface.cpp
rtc_controller_interface/test/: test_controller_log_set.cpp  test_controller_log_set_switch.cpp  test_controller_registry.cpp  test_rt_controller_interface.cpp
rtc_controller_manager/: CMakeLists.txt  README.md  package.xml
rtc_controller_manager/config/: cyclone_dds.xml  cyclone_dds_gui.xml  rt_controller_manager.yaml
rtc_controller_manager/src/: device_backend_registry.cpp  rt_controller_main.cpp  rt_controller_main_impl.cpp  rt_controller_node.cpp  rt_controller_node_callbacks.cpp  rt_controller_node_device_config.cpp  rt_controller_node_estop.cpp  rt_controller_node_params.cpp  rt_controller_node_publish.cpp  rt_controller_node_publishers.cpp  rt_controller_node_rt_loop.cpp  rt_controller_node_services.cpp  rt_controller_node_subscriptions.cpp  rt_controller_node_switch.cpp  rt_controller_node_topics.cpp
rtc_controller_manager/test/: test_controller_lifecycle.cpp  test_controller_timing_profiler.cpp  test_device_backend_cb_group_injection.cpp  test_device_backend_registry.cpp  test_robot_target_cb_group_invariant.cpp  test_switch_service.cpp
rtc_controllers/: CMakeLists.txt  README.md  package.xml
rtc_controllers/docs/: grasp_tuning_guide.md
rtc_controllers/src/: controller_registration.cpp
rtc_controllers/test/: test_core_controllers.cpp  test_grasp_controller.cpp  test_quintic_blend_trajectory.cpp  test_quintic_spline_trajectory.cpp  test_target_seqlock_race.cpp  test_task_space_blend_trajectory.cpp  test_task_space_spline_trajectory.cpp  test_task_space_trajectory.cpp
rtc_digital_twin/: README.md  package.xml  setup.cfg  setup.py
rtc_digital_twin/config/: digital_twin.rviz  digital_twin.yaml
rtc_digital_twin/launch/: digital_twin.launch.py
rtc_digital_twin/rtc_digital_twin/: digital_twin_node.py  joint_gui.py  sensor_visualizer.py  tcp_visualizer.py  urdf_config_loader.py  urdf_parser.py  urdf_validator.py
rtc_digital_twin/test/: test_urdf_config_loader.py  test_urdf_parser.py  test_urdf_validator.py
rtc_inference/: CMakeLists.txt  README.md  package.xml
rtc_mpc/: CMakeLists.txt  README.md  package.xml
rtc_mpc/config/: mpc_default.yaml
rtc_mpc/test/: mock_phase_manager.hpp  test_contact_light_mpc.cpp  test_contact_light_ocp.cpp  test_contact_rich_mpc.cpp  test_contact_rich_ocp.cpp  test_cost_factory.cpp  test_kinodynamics_ocp.cpp  test_light_contact_mpc.cpp  test_light_contact_ocp.cpp  test_mpc_factory.cpp  test_mpc_handler_alloc_tracer.cpp  test_mpc_solution_manager.cpp  test_mpc_solve_timing_logger.cpp  test_mpc_thread_integration.cpp  test_mpc_thread_mock.cpp  test_mpc_thread_skeleton.cpp  test_mpc_timing_logger.cpp  test_mpc_types.cpp  test_phase_cost_config.cpp  test_riccati_feedback.cpp  test_robot_model_handler.cpp  test_scaffold.cpp  test_trajectory_interpolator.cpp  test_triple_buffer.cpp
rtc_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
rtc_msgs/msg/: CalibrationCommand.msg  CalibrationStatus.msg  ControllerState.msg  DeviceJointState.msg  DeviceSensorLog.msg  DeviceStateLog.msg  FingertipForceTorque.msg  FingertipSensor.msg  GraspState.msg  GuiPosition.msg  HandForceTorqueState.msg  HandMotorState.msg  JointCommand.msg  JointGoal.msg  RobotTarget.msg  SimSensor.msg  SimSensorState.msg  ToFSnapshot.msg  WbcState.msg
rtc_msgs/srv/: GraspCommand.srv  ListControllers.srv  SwitchController.srv
rtc_mujoco_sim/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
rtc_mujoco_sim/config/: mujoco_default.yaml  mujoco_simulator.yaml  solver_param.yaml
rtc_mujoco_sim/launch/: mujoco_sim.launch.py
rtc_mujoco_sim/src/: mujoco_sim_loop.cpp  mujoco_simulator.cpp  mujoco_simulator_node.cpp  ros2_resource_provider.cpp
rtc_mujoco_sim/test/: test_command_state_io.cpp  test_data_flow.cpp  test_fixture.hpp  test_gravcomp_scene.cpp  test_lifecycle.cpp  test_pure_helpers.cpp  test_runtime_controls.cpp  test_simulator_init.cpp  test_solver_config.cpp
rtc_scripts/: CMakeLists.txt  README.md  package.xml
rtc_scripts/scripts/: build_deps.sh  build_rt_kernel.sh  check_rt_setup.sh  cpu_shield.sh  setup_cpu_governor.sh  setup_display_rt.sh  setup_env.sh  setup_grub_rt.sh  setup_irq_affinity.sh  setup_nvidia_rt.sh  setup_udp_optimization.sh  uninstall_system_deps.sh  verify_isolation.sh  verify_rt_runtime.sh
rtc_scripts/test/: test_rt_common.sh
rtc_status_monitor/: CMakeLists.txt  README.md  package.xml
rtc_tools/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
rtc_tsid/: CMakeLists.txt  README.md  package.xml
rtc_urdf_bridge/: CMakeLists.txt  README.md  package.xml
(+981 files in other folders)
