<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_rt_controller</name>
  <version>4.4.0</version>
  <description>UR5e Real-time Controller with MuJoCo Simulation Support (v4.4.0)</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>pinocchio</depend>
  <depend>ament_index_cpp</depend>

  <!-- MuJoCo (optional C++ library — not a ROS2 package; install separately)
       https://github.com/google-deepmind/mujoco/releases -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
