<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_base</name>
  <version>5.17.0</version>
  <description>Header-only C++20 RT infrastructure library for RTC framework. Shared types, SeqLock, SPSC buffers, Bessel/Kalman filters, thread configs (4/6/8/10/12/16-core), timing profiler, CSV data logger.</description>
  <maintainer email="jeryblueput@gmail.com">Junho Park</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
