<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_controller_interface</name>
  <version>5.17.0</version>
  <description>Abstract controller interface (Strategy pattern) and singleton ControllerRegistry for the RTC framework. RTControllerInterface base class with RTC_REGISTER_CONTROLLER macro.</description>
  <maintainer email="jeryblueput@gmail.com">Junho Park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rtc_base</depend>
  <depend>rtc_msgs</depend>
  <depend>rtc_urdf_bridge</depend>
  <depend>pinocchio</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
